@@ -1,0 +1,38 @@
+# This file defines the goups which are shown in the editor
+# all editor_group entries in terrain.cfg should have a corresponding id here
+# name is shown in the tooltip in the editor
+# icon is the button icon name
+
+#NOTE: the name is a translatable string the translation marker is omitted
+# due to the fact the names are not determined yet
+
+#The all entry shows all terrains and must be available
+[editor_group]
+id=all
+name="the whole bunch"
+icon="group_all"
+[/editor_group]
+
+[editor_group]
+id=bridge
+name="bridge"
+icon="group_bridge"
+[/editor_group]
+
+[editor_group]
+id=water
+name="water"
+icon="group_water"
+[/editor_group]
+
+[editor_group]
+id=village
+name="village"
+icon="group_village"
+[/editor_group]
+
+[editor_group]
+id=ice
+name=_ "ice"
+icon="group_ice"
+[/editor_group]
