@@ -39,6 +39,7 @@ string=Ai
 char=i
 unit_height_adjust=-2
 aliasof=Aa
+editor_group=ice
 [/terrain]
 
 [terrain]
@@ -47,6 +48,7 @@ id=tundra
 name= _ "Snow"
 string=Aa
 char=S
+editor_group=ice
 [/terrain]
 
 #
@@ -61,6 +63,7 @@ name= _ "Bridge"
 char=|
 string=Bww|
 aliasof=Gg, Ww
+editor_group=bridge
 [/terrain]
 
 [terrain]
@@ -70,6 +73,7 @@ name= _ "Bridge"
 char=/
 string=Bww/
 aliasof=Gg, Ww
+editor_group=bridge
 [/terrain]
 
 [terrain]
@@ -79,6 +83,7 @@ name= _ "Bridge"
 char=\
 string=Bww\
 aliasof=Gg, Ww
+editor_group=bridge
 [/terrain]
 
 # Deep Water Bridge
@@ -89,6 +94,7 @@ name= _ "Bridge"
 #char=|
 string=Bwo|
 aliasof=Gg, Wo
+editor_group=bridge
 [/terrain]
 
 [terrain]
@@ -98,6 +104,7 @@ name= _ "Bridge"
 #char=/
 string=Bwo/
 aliasof=Gg, Wo
+editor_group=bridge, water
 [/terrain]
 
 [terrain]
@@ -107,6 +114,7 @@ name= _ "Bridge"
 #char=\
 string=Bwo\
 aliasof=Gg, Wo
+editor_group=bridge, water
 [/terrain]
 
 # Swamp Water Bridge
@@ -117,6 +125,7 @@ name= _ "Bridge"
 #char=|
 string=Bss|
 aliasof=Gg, Ss
+editor_group=bridge, water
 [/terrain]
 
 [terrain]
@@ -126,6 +135,7 @@ name= _ "Bridge"
 #char=/
 string=Bss/
 aliasof=Gg, Ss
+editor_group=bridge, water
 [/terrain]
 
 [terrain]
@@ -135,6 +145,7 @@ name= _ "Bridge"
 #char=\
 string=Bss\
 aliasof=Gg, Ss
+editor_group=bridge, water
 [/terrain]
 #
 # Castles
@@ -616,6 +627,7 @@ char=B
 aliasof=Vhg, Dd
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 [terrain]
@@ -627,6 +639,7 @@ char=U
 aliasof=Vhq, Dd
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 # Elven
@@ -640,6 +653,7 @@ char=e
 aliasof=Vhg
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 
@@ -652,6 +666,7 @@ string=Veg
 aliasof=Vhg
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 
@@ -666,6 +681,7 @@ char=V
 aliasof=Vhg
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 [terrain]
@@ -676,6 +692,7 @@ char=v
 string=Vhg
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 [terrain]
@@ -687,6 +704,7 @@ char=a
 aliasof=Vhg, Hh
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 [terrain]
@@ -698,6 +716,7 @@ char=A
 aliasof=Vhg, Hh
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 [terrain]
@@ -709,6 +728,7 @@ char=b
 aliasof=Vhg, Mm
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 [terrain]
@@ -720,6 +740,7 @@ char=L
 aliasof=Vhg
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 # Underground
@@ -733,6 +754,7 @@ char=D
 aliasof=Vhg, Uu
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 [terrain]
@@ -744,6 +766,7 @@ char=p
 aliasof=Vhg, Uu
 heals=8
 gives_income=true
+editor_group=village
 [/terrain]
 
 # Water
@@ -759,6 +782,7 @@ submerge=0.4
 unit_height_adjust=-4
 heals=8
 gives_income=true
+editor_group=water, village
 [/terrain]
 
 # Swamp
@@ -772,6 +796,7 @@ char=Y
 aliasof=Vhg, Ss
 heals=8
 gives_income=true
+editor_group=water
 [/terrain]
 
 #
@@ -786,6 +811,7 @@ string=Wo
 char=s
 submerge=0.5
 unit_height_adjust=-3
+editor_group=water
 [/terrain]
 
 [terrain]
@@ -796,6 +822,7 @@ char=c
 string=Ww
 submerge=0.4
 unit_height_adjust=-4
+editor_group=water
 [/terrain]
 
 
@@ -808,6 +835,7 @@ char=k
 aliasof=Gg, Wwf
 submerge=0.3
 unit_height_adjust=-4
+editor_group=water
 [/terrain]
 
 #
