@@ -40,6 +40,9 @@ Version 1.3-svn:
     * Flipping a map over the Y axis no longer resizes the map.
     * Flipping a map over the X axis uses slightly different filler rules.
     * Added the paste option to the edit menu.
+    * The terrains are now split in groups to the list of terrains per group
+      is a more friendly list. (NOTE this needs to be finished before 
+      a release Mordante's graphics suck ;) )
 
   * Multiplayer
     * Maps
